--- a/_02.1_positions.ipynb
+++ b/_02.1_positions.ipynb
@@ -7,9 +7,7 @@
    "outputs": [],
    "source": [
     "from manim import *\n",
-    "config.media_width = \"100%\"\n",
-    "_RV = \"-v WARNING -qm --progress_bar None --disable_caching Example\"\n",
-    "_RI = \"-v WARNING -ql -s --progress_bar None --disable_caching Example\""
+    "config.media_width = \"100%\""
    ]
   },
   {
@@ -46,6 +44,16 @@
     "        self.play(Write(text, run_time=3))\n",
     "        self.wait()\n",
     "%manim -v WARNING -qm --progress_bar None --disable_caching Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_RV = \"-v WARNING -qm --progress_bar None --disable_caching Example\"\n",
+    "_RI = \"-v WARNING -ql -s --progress_bar None --disable_caching Example\""
    ]
   },
   {
@@ -129,7 +137,7 @@
     "└──────────────────────────────────────────────────────────┘\n",
     "```\n",
     "\n",
-    "## ** All objects are created at the origin of the Cartesian system **"
+    "## ** Most objects are created at the origin of the Cartesian system **"
    ]
   },
   {
@@ -173,7 +181,7 @@
     "                                                                               \n",
     "```\n",
     "## a) Absolute positions\n",
-    "The reference is the screen\n",
+    "The reference is the screen coordinates\n",
     "\n",
     "### a.1) `mob.move_to(<other-mob|vector>)`\n",
     "\n",
@@ -264,8 +272,8 @@
     "\n",
     "        dot = Dot()\n",
     "        dot.move_to(2 * RIGHT + 3 * DOWN)\n",
-    "        dot.move_to(2 * RIGHT + 3 * DOWN)\n",
-    "        dot.move_to(2 * RIGHT + 3 * DOWN)\n",
+    "        # dot.move_to(2 * RIGHT + 3 * DOWN)\n",
+    "        # dot.move_to(2 * RIGHT + 3 * DOWN)\n",
     "\n",
     "        self.add(number_plane, dot)\n",
     "\n",
@@ -314,11 +322,18 @@
    "metadata": {},
    "source": [
     "### Some `getters`\n",
+    "* `mob.get_center()`\n",
     "* `mob.get_top()`\n",
     "* `mob.get_bottom()`\n",
     "* `mob.get_right()`\n",
     "* `mob.get_left()`\n",
-    "* `mob.get_corner(<corner-vector>)`"
+    "* `mob.get_x()` (x coord of `mob.get_center()`)\n",
+    "* `mob.get_y()` (y coord of `mob.get_center()`)\n",
+    "* `mob.get_z()` (z coord of `mob.get_center()`)\n",
+    "* `mob.get_corner(<corner-vector>)`\n",
+    "\n",
+    "All these methods return the vectors using the <u>**bounding  box**</u> as a reference, if you don't know what it is I recommend you watch this video:\n",
+    "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/aVwxzDHniEw\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen></iframe>"
    ]
   },
   {
@@ -425,7 +440,7 @@
     "    def construct(self):\n",
     "        number_plane = NumberPlane()\n",
     "        # buff can also be negative\n",
-    "        c = Circle().to_edge(UR, buff=0)\n",
+    "        c = Circle().to_corner(UR, buff=0)\n",
     "\n",
     "        self.add(number_plane, c)\n",
     "\n",
@@ -523,7 +538,7 @@
     "        number_plane = NumberPlane()\n",
     "\n",
     "        s = Square().move_to(RIGHT * 2 + UP * 2)\n",
-    "        t = Text(\"A\").next_to(s, DOWN, aligned_edge=ORIGIN)\n",
+    "        t = Text(\"A\").next_to(s, DOWN, aligned_edge=ORIGIN) # ORIGIN is the default value\n",
     "\n",
     "        self.add(number_plane, s, t)\n",
     "\n",
@@ -582,12 +597,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.15 (main, Oct 11 2022, 21:39:54) \n[Clang 14.0.0 (clang-1400.0.29.102)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "aaa2ee04782896c27b55217860e0cd5b58365a25928fe1c3b155454484dea9ee"
+    "hash": "475b7dfd448a940e621580bd23333d8f3edae627135e3757b87c7caf06e6fd7a"
    }
   }
  },
